<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.catatan.TambahCatatan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tambah"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <ImageView
            android:id="@+id/icon_camera"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/camera"
            android:contentDescription="@string/camera_icon"
            android:layout_marginStart="16dp" />
    </LinearLayout>
</FrameLayout>
