<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/warm_cream"
    tools:context=".ui.rekening.TambahRekening">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_brown"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/menu_rekening"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/input_nama_rekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_rekening"
            android:background="@android:drawable/edit_text"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:inputType="text" />

        <Button
            android:id="@+id/button_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_simpanedit"
            android:text="@string/simpan"
            android:textColor="@android:color/white"
            android:layout_gravity="end" />
    </LinearLayout>
</LinearLayout>
